--- a/style.css
+++ b/style.css
@@ -1,13 +1,207 @@
-.topnav {
-    background-color: whitesmoke;
-    overflow: hidden;
-}
-
-.topnav a {
-    float: left;
-    color: gray;
-    text-align: center;
-    padding: 10px 8px;
-    text-decoration: none;
-    font-size: 10px;
-}
+    body {
+        padding: 0%;
+        margin: 0%;
+        background-color: rgb(250, 246, 246);
+        font-family: "Lato", sans-serif;
+    }
+    
+    .body-background {
+        background-image: url("/FigmaProject/img/james-barr-zy5JTdcC0fE-unsplash\ 1.jpg");
+        height: 100vh;
+        width: 100%;
+        background-size: cover;
+        background-position: center;
+    }
+    
+    #intro {
+        line-height: 25px;
+        width: 33%;
+        flex-direction: row;
+        display: flex;
+    }
+    
+    .s1 {
+        width: auto;
+        padding-left: 20px;
+        padding-top: 70px;
+        margin-left: 70px;
+    }
+    
+    .hero {
+        font-size: 50px;
+    }
+    
+    button {
+        padding: 30px;
+        box-sizing: border-box;
+        border: 1px solid;
+        width: 200px;
+        margin-top: 20px;
+        background-color: transparent;
+    }
+    
+    .about-me {
+        margin-top: 70px;
+    }
+    
+    .s2 {
+        margin: 30px;
+        margin-right: 50px;
+        width: 100%;
+        display: inline-flex;
+        flex-direction: row;
+    }
+    
+    .para {
+        line-height: 25px;
+        width: 50%;
+        float: right;
+        flex-direction: row;
+        margin-left: 40px;
+    }
+    
+    .grid-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: start;
+        margin-left: 40px;
+        margin-right: 40px;
+        margin-top: 40px;
+    }
+    
+    .item {
+        margin: 10px;
+    }
+    
+    .gallery {
+        align-items: center;
+        text-align: center;
+    }
+    
+    .client-container {
+        display: flex;
+        /* flex-wrap: wrap; */
+        justify-content: space-between;
+        margin-top: 50px;
+        margin-left: 60px;
+        margin-right: 60px;
+    }
+    
+    .clients {
+        text-align: center;
+        margin-top: 60px;
+    }
+    
+    .client-item {
+        background-color: transparent;
+        height: 75px;
+    }
+    
+    .btn {
+        box-sizing: border-box;
+        border: 3px solid;
+        width: auto;
+        height: auto;
+    }
+    
+    .s3 {
+        margin: 30px;
+        margin-right: 50px;
+        width: 100%;
+        display: inline-flex;
+        flex-direction: row;
+    }
+    
+    #text {
+        width: 505px;
+        height: 60px;
+        line-height: 21px;
+        padding: 12px 20px;
+        margin: 18px;
+        border: 1px solid rgb(0, 0, 0);
+        background-color: transparent;
+        box-sizing: border-box;
+        border-radius: 5px;
+    }
+    
+    #textarea {
+        width: 505px;
+        height: 228px;
+        padding: 12px 20px;
+        margin: 18px;
+        box-sizing: border-box;
+        border: 1px solid rgb(0, 0, 0);
+        border-radius: 5px;
+        background-color: transparent;
+    }
+    
+    .para2 {
+        line-height: 25px;
+        width: 75%;
+        float: right;
+        flex-direction: row;
+        margin-left: 40px;
+    }
+    
+    .btn1 {
+        padding: 30px;
+        box-sizing: border-box;
+        border: 1px solid;
+        width: 200px;
+        margin-top: 20px;
+        background-color: transparent;
+    }
+    
+    a:link {
+        text-decoration: none;
+    }
+    
+    .ul {
+        list-style: none;
+        flex-direction: row;
+        display: flex;
+        float: right;
+        color: gray;
+        padding: 10px;
+    }
+    
+    .ul1 {
+        list-style: none;
+        flex-direction: column;
+        display: flex;
+        float: right;
+        font: 1.5em sans-serif;
+    }
+    
+    .ul2 {
+        list-style: none;
+        flex-direction: row;
+        display: flex;
+        justify-content: center;
+        justify-items: center;
+        font: 1.5em sans-serif;
+    }
+    
+    .list {
+        margin: 10px;
+    }
+    
+    label {
+        font-size: 150%;
+    }
+    
+    input {
+        width: 50%;
+        padding: 10px 12px;
+        margin: 6px 0;
+        box-sizing: border-box;
+        border: 1px solid;
+        border-radius: 4px;
+        resize: none;
+    }
+    
+    .footer {
+        font-size: small;
+        text-align: center;
+        margin-bottom: 50px;
+    }
